🐛 FIX: Change colors in dark mode

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -31,7 +31,7 @@
 }
 
 .dark-mode .fill-accent {
-  fill: #3adbb9;
+  fill: #2a98db;
 }
 
 .light-mode .fill-logo {
@@ -47,5 +47,5 @@
 }
 
 .dark-mode .fill-eyes {
-  fill: #3adbb9;
+  fill: #2a98db;
 }
